Fix missing updates with sourceItem with some types of texture providers

Pick-to: 6.1 6.0
Fixes: QTBUG-91412
Change-Id: Ibeb82ab7da1739f8bb5ddd52cbe9023668703c81
Reviewed-by: Jonas Karlsson <jonas.karlsson@qt.io>
Reviewed-by: Qt CI Bot <qt_ci_bot@qt-project.org>
Reviewed-by: Andy Nichols <andy.nichols@qt.io>